added docker-compose and base public index

--- a/docker-images/php-fpm/Dockerfile
+++ b/docker-images/php-fpm/Dockerfile
@@ -1,9 +1,15 @@
 FROM php:7.4-fpm
 
+ENV DIRPATH /var/www/html
+
 # Install php extensions
 RUN apt-get update && apt-get install -y \
         libfreetype6-dev \
         libjpeg-dev \
         libpng-dev \
     && docker-php-ext-configure gd --with-freetype --with-jpeg \
-    && docker-php-ext-intall -j$(nproc) gd
+    && docker-php-ext-install -j$(nproc) gd
+
+VOLUME ${DIRPATH}
+
+EXPOSE 9000
