--- a/docker-images/apache/Dockerfile
+++ b/docker-images/apache/Dockerfile
@@ -4,6 +4,8 @@ ENV DIRPATH /var/www/html
 
 COPY ./httpd.conf /usr/local/apache2/conf/httpd.conf
 
+VOLUME ${DIRPATH}
+
 EXPOSE 80
 
 WORKDIR $DIRPATH
