--- a/public/js/package.json
+++ b/public/js/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "description": "Used for the laboratory",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -12,6 +13,7 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "chance": "^1.1.5"
+    "chance": "^1.1.5",
+    "express": "^4.17.1"
   }
 }
