--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,11 +4,20 @@ networks:
     backend:
     frontend:
 
-services:
+services: 
+    reverse-proxy:
+        build: ./docker-images/nginx-reverse-proxy
+        container_name: 'reverse-proxy'
+        depends_on: 
+            - apache
+            - express
+        networks: 
+            - backend
+            - frontend
     apache:
         build: ./docker-images/apache
         container_name: 'apache'
-        depends_on:
+        depends_on: 
             - php-fpm
         networks:
             - backend
