working nginx reverse proxy

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
         depends_on: 
             - apache
             - express
+        ports: 
+            - "8080:80"
         networks: 
             - backend
             - frontend
