--- a/docker-images/nginx-reverse-proxy/Dockerfile
+++ b/docker-images/nginx-reverse-proxy/Dockerfile
@@ -1,2 +1,8 @@
 FROM nginx:1.17
 
+COPY ./nginx.conf /etc/nginx/nginx.conf
+COPY ./proxy.conf /etc/nginx/conf.d/default.conf
+
+EXPOSE 80
+
+CMD ["nginx", "-g", "daemon off;"]
