--- a/public/js/package.json
+++ b/public/js/package.json
@@ -14,6 +14,7 @@
   "license": "MIT",
   "dependencies": {
     "chance": "^1.1.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "jquery": "^3.5.1"
   }
 }
