--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,9 +36,9 @@ services:
     express:
         build: ./docker-images/express
         container_name: 'express'
-        ports: 
+        ports:
             - "3000:3000"
-        networks: 
+        networks:
             - backend
-        volumes: 
-            - ./public/js:/opt/app 
+        volumes:
+            - ./app:/opt/app
