Run npm install when starting expressjs container

--- a/docker-images/express/Dockerfile
+++ b/docker-images/express/Dockerfile
@@ -1,9 +1,11 @@
 FROM node:14.2
 
-ENV DIRPATH /opt/app 
+ENV DIRPATH /opt/app
 
 VOLUME ${DIRPATH}
 
 EXPOSE 3000
 
 WORKDIR ${DIRPATH}
+
+CMD npm install --no-bin-links && node index.js
