--- a/app/package.json
+++ b/app/package.json
@@ -14,7 +14,6 @@
   "license": "MIT",
   "dependencies": {
     "chance": "^1.1.5",
-    "express": "^4.17.1",
-    "jquery": "^3.5.1"
+    "express": "^4.17.1"
   }
 }
