added upstream on reverse-proxy config

--- a/docker-images/nginx-reverse-proxy/proxy.conf
+++ b/docker-images/nginx-reverse-proxy/proxy.conf
@@ -1,3 +1,11 @@
+upstream docker-apache {
+    server apache:80;
+}
+
+upstream docker-express {
+    server express:3000;
+}
+
 server { ## reverse proxy
     listen       80;
     server_name  demo.res.ch;
@@ -6,11 +14,11 @@ server { ## reverse proxy
 
     ## redirect
     location / {
-        proxy_pass http://apache:80;
+        proxy_pass http://docker-apache;
     }
 
     location /api {
-        proxy_pass http://express:3000;
+        proxy_pass http://docker-express;
     }
 }
 
