--- a/docker-images/nginx-reverse-proxy/proxy.conf
+++ b/docker-images/nginx-reverse-proxy/proxy.conf
@@ -1,8 +1,10 @@
 upstream docker-apache {
+    # ip_hash;
     server apache:80;
 }
 
 upstream docker-express {
+    # ip_hash;
     server express:3000;
 }
 
