--- a/docker-images/nginx-reverse-proxy/proxy.conf
+++ b/docker-images/nginx-reverse-proxy/proxy.conf
@@ -22,5 +22,9 @@ server { ## reverse proxy
     location /api {
         proxy_pass http://docker-express;
     }
+
+    location /management {
+        proxy_pass http://management-ui:80;
+    }
 }
 
