--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     apache:
         build: ./docker-images/apache
         # container_name: 'apache'
-        depends_on: 
+        depends_on:
             - php-fpm
         networks:
             - frontend
@@ -27,9 +27,16 @@ services:
             - frontend
         volumes:
             - ./app:/opt/app
+    management-ui:
+        build: ./docker-images/management-ui
+        container_name: 'management-ui'
+        networks:
+            - frontend
+        volumes:
+            - //var/run/docker.sock:/var/run/docker.sock
     php-fpm:
         build: ./docker-images/php-fpm
-        container_name: 'php-fpm'
+        # container_name: 'php-fpm'
         depends_on:
             - composer
         networks:
@@ -42,6 +49,7 @@ services:
         depends_on: 
             - apache
             - express
+            - management-ui
         ports: 
             - "8080:80"
         networks: 
