--- a/docker-images/management-ui/Dockerfile
+++ b/docker-images/management-ui/Dockerfile
@@ -2,13 +2,14 @@ FROM php:7.4-cli
 
 ENV DIRPATH /var/www/html
 
-COPY src ${DIRPATH}
-COPY --from=composer:1.10 /usr/bin/composer /usr/local/bin/composer
-
 RUN apt-get update && apt-get install -y \
         libicu-dev \
-    && docker-php-ext-install intl \
-    && composer install -d ${DIRPATH}
+    && docker-php-ext-install intl
+
+COPY --from=composer:1.10 /usr/bin/composer /usr/local/bin/composer
+COPY src ${DIRPATH}
+
+RUN composer install -d ${DIRPATH}
 
 EXPOSE 80
 
