--- a/docker-images/nginx-reverse-proxy/proxy.conf
+++ b/docker-images/nginx-reverse-proxy/proxy.conf
@@ -16,15 +16,15 @@ server { ## reverse proxy
 
     ## redirect
     location / {
-        proxy_pass http://docker-apache;
+        proxy_pass http://docker-apache/;
     }
 
-    location /api {
-        proxy_pass http://docker-express;
+    location /api/ {
+        proxy_pass http://docker-express/;
     }
 
-    location /management {
-        proxy_pass http://management-ui:80;
+    location /management/ {
+        proxy_pass http://management-ui:80/;
     }
 }
 
