problem with docker desktop

--- a/docker-images/nginx-reverse-proxy/proxy.conf
+++ b/docker-images/nginx-reverse-proxy/proxy.conf
@@ -19,7 +19,7 @@ server { ## reverse proxy
         proxy_pass http://docker-apache/;
     }
 
-    location /api/ {
+    location /api {
         proxy_pass http://docker-express/;
     }
 
